# chromaspec

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  chromaspec.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  test.yml
chromaspec/: __init__.py  cli.py  container.py  exceptions.py
chromaspec/analyzers/: __init__.py  accessibility.py  classification.py  dark_mode.py  harmonies.py
chromaspec/converters/: __init__.py  hsl_converters.py  rgb_converters.py
chromaspec/extractors/: __init__.py  image_extractor.py  strategies.py  svg_extractor.py
chromaspec/generators/: __init__.py  accessibility_page.py  charts.py  palette.py  pdf_generator.py  pdf_pages.py
chromaspec/utils/: __init__.py  constants.py  security.py  validators.py
tests/: __init__.py  test_analyzers.py  test_converters.py  test_dark_mode.py  test_extractors.py  test_integration.py  test_palette_generator.py  test_validators.py
