[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromaspec"
version = "1.2.0"
description = "Python CLI tool for color palette analysis. Extract colors from images and SVG files, generate professional PDF swatches with HEX/RGB/CMYK values, frequency stats, pie charts, color harmonies, and WCAG accessibility ratings."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michail Semoglou"}
]
keywords = [
    "color",
    "palette",
    "color-extraction",
    "image-analysis",
    "svg",
    "pdf",
    "color-swatch",
    "design",
    "accessibility",
    "wcag",
    "cmyk",
    "rgb",
    "hex"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Printing",
    "Topic :: Utilities"
]
requires-python = ">=3.9"
dependencies = [
    "reportlab>=4.0.0",
    "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/MichailSemoglou/chromaspec"
Repository = "https://github.com/MichailSemoglou/chromaspec"
Issues = "https://github.com/MichailSemoglou/chromaspec/issues"

[project.scripts]
chromaspec = "chromaspec:main"

[tool.setuptools]
py-modules = ["chromaspec"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
